# OS

./: .gitignore
team_065/: .gitlab-ci.yml
team_065/01R_basics/: Makefile  shellutils.c  test.c
team_065/02R_zeiger/src/: lili.c
team_065/03R_prozesse/: CMakeLists.txt
team_065/03R_prozesse/myshell/: CMakeLists.txt
team_065/03R_prozesse/myshell/include/: shellfunctions.h
team_065/03R_prozesse/myshell/src/: main.c  plist.c  shellfunctions.c
team_065/03R_prozesse/tests/: CMakeLists.txt
team_065/03R_prozesse/tests/include/: colorCodes.h  shellfunctions_helper.h
team_065/03R_prozesse/tests/ressources/: run-tests.bash
team_065/03R_prozesse/tests/src/: test-background.c  test-cd.c  test-foreground.c  test-input.c  test-walklist.c  test-zombies.c  wait.c
team_065/05R_Speicherverwaltung/include/: mymalloc.h
team_065/05R_Speicherverwaltung/ressources/: run_compare.bash
team_065/05R_Speicherverwaltung/src/: main.c  mymalloc.c
team_065/07R_Signale/: CMakeLists.txt
team_065/07R_Signale/Backtrace/: CMakeLists.txt
team_065/07R_Signale/Backtrace/include/: backtrace.h
team_065/07R_Signale/Backtrace/src/: backtrace.c  main.c
team_065/07R_Signale/Ressources/: print-signal  test-backtrace.sh  test-signal.sh
team_065/07R_Signale/Send-signal/: CMakeLists.txt
team_065/07R_Signale/Send-signal/src/: main.c
team_065/09R_IPC_threads_client/include/: client.h  utils.h
team_065/09R_IPC_threads_client/ressources/: myGroup-server
team_065/09R_IPC_threads_client/src/: client.c  utils.c
team_065/11R_IPC_threads_server/include/: ring_buffer.h  server.h
team_065/11R_IPC_threads_server/ressources/: myGroup-test-client
team_065/11R_IPC_threads_server/src/: reads_list.c  ring_buffer.c  server.c
